# scc-kata-leetcode

./: .gitignore  CMakeLists.txt  readme.md
067/: CMakeLists.txt  Solution.cpp  Solution.h  SolutionTest.cpp  main.cpp  readme.md
201/: Solution.cpp  Solution.h  SolutionTest.cpp  readme.md
691/: CMakeLists.txt  Solution.cpp  Solution.h  SolutionTest.cpp  main.cpp  readme.md
